
ORZ_PRE_BUILD_EVENT(Navi)





ADD_DEFINITIONS( -D${LIB_NAME_TOUPPER}_EXPORTS -D_USRDLL
-DWIN32
-D_WIN32
-DUNICODE
-DOSM_NONCLIENT_BUILD
-D_WINDOWS
-DNOMINMAX
-DWEBKIT_USING_SKIA
-DU_HAVE_INT32_T=1
-DU_HAVE_UINT32_T=1
)

LINK_DIRECTORIES(${ogre_lib})

INCLUDE_DIRECTORIES(
"include"
${ogre_include}
${utf8_include}
)






ORZ_SET_PROJECT_FILES("include"  Include/ .h)
ORZ_SET_PROJECT_FILES("src" Source/ .cpp)
   
ADD_LIBRARY(${LIB_NAME} SHARED ${${LIB_NAME}_FILE})
TARGET_LINK_LIBRARIES(${LIB_NAME} 
debug OgreMain_d
optimized OgreMain
)

ORZ_POST_BUILD_EVENT()