CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )




LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)
INCLUDE(CPack)



MACRO(ORZ_ADD_PROJECT type group dir)

	FOREACH(var ${ARGN})
		LIST(APPEND ${LIB_NAME}_${type} ${dir}${var})
		SOURCE_GROUP(${group} FILES ${dir}${var})
	ENDFOREACH( var )

ENDMACRO(ORZ_ADD_PROJECT)



MACRO(ORZ_SET_PROJECT type group dir match)

	FILE(GLOB var ${dir}*${match})
	
	FOREACH(f ${var})
		GET_FILENAME_COMPONENT(f ${f} NAME_WE)
		ORZ_ADD_PROJECT(${type} ${group} ${dir} "${f}${match}")
	ENDFOREACH()

ENDMACRO(ORZ_SET_PROJECT)



MACRO(ORZ_ADD_PROJECT_FILE group dir)
	FOREACH(var ${ARGN})
		LIST(APPEND ${LIB_NAME}_FILE ${dir}${var})
		SOURCE_GROUP(${group} FILES ${dir}${var})
	ENDFOREACH( var )
ENDMACRO(ORZ_ADD_PROJECT_FILE)



MACRO(ORZ_SET_PROJECT_FILES group dir match)

	FILE(GLOB orz_files  ${dir}*${match})
	
	FOREACH(f ${orz_files})
		GET_FILENAME_COMPONENT(f ${f} NAME_WE)
		ORZ_ADD_PROJECT_FILE(${group} ${dir} "${f}${match}")

	ENDFOREACH()

ENDMACRO(ORZ_SET_PROJECT_FILES)






MACRO( ORZ_PRE_BUILD_EVENT target )
	SET( LIB_NAME ${target} )
	SET( EXE_NAME ${target} )
	STRING(TOUPPER ${LIB_NAME} LIB_NAME_TOUPPER)
ENDMACRO( ORZ_PRE_BUILD_EVENT )


MACRO( ORZ_POST_BUILD_EVENT )
	INSTALL(TARGETS ${LIB_NAME} 
		RUNTIME DESTINATION bin/debug
		CONFIGURATIONS Debug
		LIBRARY DESTINATION lib/debug
		CONFIGURATIONS Debug
		ARCHIVE DESTINATION lib/debug
		CONFIGURATIONS Debug
	)

	INSTALL(TARGETS ${LIB_NAME} 
		RUNTIME DESTINATION bin/release
		CONFIGURATIONS Release
		LIBRARY DESTINATION lib/release 
		CONFIGURATIONS Release
		ARCHIVE DESTINATION lib/release
		CONFIGURATIONS Release
	)


ENDMACRO(  ORZ_POST_BUILD_EVENT)



PROJECT(Aomi)
	


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)




INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Awesomium/include)

SET(chromium_src CACHE PATH "the directory of the chromium'src")
SET(ogre_lib CACHE PATH "")
SET(ogre_include CACHE PATH "")
SET(utf8_include CACHE PATH "")
ADD_SUBDIRECTORY(Awesomium)
ADD_SUBDIRECTORY(Navi)

ADD_DEPENDENCIES(Navi Awesomium)

SET(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/" CACHE PATH "${PROJECT_NAME} install prefix" FORCE ) 
