CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
INCLUDE(OrzCMakeModule)
INCLUDE(PrecompiledHeader)
INCLUDE(OrzSenselock)
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(OrzSDK)
FIND_PACKAGE(Qt4 REQUIRED) # find and setup Qt4 for this projec

ORZ_PRE_BUILD(CodingComponent)


FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/interface SAN_PROJECT_INTERFACE_DIR)
FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/component SAN_PROJECT_COMPONENT_DIR)

INCLUDE_DIRECTORIES(
${SAN_PROJECT_INTERFACE_DIR}
)




ADD_SUBDIRECTORY(CodingComponent)
ADD_SUBDIRECTORY(Coding)
ADD_SUBDIRECTORY(CodingComponentUT)


ORZ_POST_BUILD()


INCLUDE(FindSanProject)


INSTALL(FILES 
${QT_BINARY_DIR}/QtGuid4.dll
${QT_BINARY_DIR}/QtCored4.dll
${QT_BINARY_DIR}/QtWebKitd4.dll
 DESTINATION ./bin/Debug)
 
 
INSTALL(FILES 
${QT_BINARY_DIR}/QtGui4.dll
${QT_BINARY_DIR}/QtCore4.dll
${QT_BINARY_DIR}/QtWebKit4.dll
 DESTINATION ./bin/Release)
