CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCMakeModule)
INCLUDE(PrecompiledHeader)






ORZ_PRE_BUILD(OrzParticleUniverse)



INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dependencies/include/ ${Orz_SDK_DIR}/dependencies/include/Ogre)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/dependencies/${Compiler}/lib/)

ADD_SUBDIRECTORY(PUComponent)
ADD_SUBDIRECTORY(Sample)


#ADD_DEPENDENCIES(Sample PUComponen)


INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/dependencies/include/ DESTINATION ./include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/dependencies/${Compiler}/bin/ DESTINATION ./bin PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/dependencies/${Compiler}/lib/ DESTINATION ./lib PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/dependencies/media/ DESTINATION ./media PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)

ORZ_POST_BUILD()



